# CppExperiments

./: CMakeLists.txt  cpp17main.cpp  cpp20main.cpp
cpp17/: counter.h  mutable_compile_time_list.h
cpp20/: counter.h
